style.css
:root {
  --blue: #0065fc;
  --light-blue: #deebff;
  --gray: #f2f2f2;
  --white: #ffffff;
  --black: #000000;
}

.fas::before {
  padding-left: 1px;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  font-family: Raleway;
}

#logoSearchBar {
  width: 20px;
  height: 20px;
}

.title {
  font-size: 18px;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.subtitle {
  display: flex;
  font-size: 14px;
  top: 90px;
  font-size: 11px;
}

nav {
  display: flex;
  font-size: 14px;
}

header {
  display: flex;
  justify-content: space-between;
  padding: 0 20px;
}

form {
  display: flex;
}
.searchBar {
  all: unset;
  height: 42px;
  width: 180px;
  border-radius: 0;
  border-color: var(--gray);
  border-style: solid;
  padding-left: 20px;
}
.imgSearchBar {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 48px;
  width: 45px;
  border-radius: 15px 0px 0px 15px;
  background: var(--gray);
  min-width: 45px;
}
.Rechercher {
  height: 47px;
  width: 100px;
  margin-right: 70px;
  background: var(--blue);
  border-style: none;
  color: var(--white);
  cursor: pointer;
  border-radius: 0px 15px 15px 0px;
  font-weight: bold;
}
.filtres {
  display: inline-flex;
  flex-wrap: wrap;
  font-weight: bold;
  gap: 20px;
}

.title-filter{
  margin-right: 20px;
  display: inline-block;
}

.minibox {
  display: flex;
  position: relative;
  justify-content: flex-start;
  padding-right: 10px;
  align-items: center;
  height: 35px;
  border: 2px solid var(--gray);
  border-radius: 40px;
  cursor: pointer;
  padding-left: 48px;
}
.iconFiltres {
  display: flex;
  position: absolute;
  left: -2px;
  width: 38px;
  height: 38px;
  border-radius: 50%;
  background-color: var(--light-blue);
  justify-content: center;
  align-items: center;
  margin-right: 10px;
}
.fas {
  color: var(--blue);
}

.box {
  all: unset;
  height: 80px;
  padding: 0 25px;
  display: flex;
  align-items: center;
  cursor: pointer;
  color: var(--black);
}

.box:hover {
  color: var(--blue);
}

.minibox:hover {
  color: var(--blue);
}
.box:focus {
  border-top: 2px solid var(--blue);
}

.infoSearch {
  display: flex;
  align-items: center;
}
.infoLogement {
  padding-left: 10px;
}
.icon {
  display: flex;
  border-radius: 50%;
  width: 21px;
  height: 1px;
  padding: 10px 0px;
  border-color: var(--gray);
  align-items: center;
  justify-content: center;
  border-style: solid;
}

.fa-info {
  color: var(--blue);
  font-size: 10px;
  justify-content: center;
  align-items: center;
}

::placeholder {
  color: var(--black);
  font-weight: bold;
  font-size: 15px;
}
.card {
  border-radius: 20px;
  background-color: var(--gray);
  padding: 30px 25px;
  min-width: 248px;
}

.AfficherPlus{
  cursor: pointer;
  border: none;
}

.AfficherPlus:hover{
color: var(--blue);
}

.parent {
  display: flex;
  flex-wrap: wrap;
  max-width: 744px;
  min-width: 248px;
}
.small-card {
  display: flex;
  justify-content: center;
  flex-direction: column;

  height: 150px;
  width: 200px;
  margin: 20px;

  background: var(--white);
  border-radius: 20px;
  border: 4px solid white;
  overflow: hidden;
}
.imgcard{
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  flex-wrap: wrap;
  font-size: 14px;
  font-weight: bold;
}

.imgsmall-card {
  width: 100%;
  height: 60%;
  object-fit: cover;
}

.card-content {
  width: 100%;
  height: 40%;
  padding: 5px 0 0 7px;
}

.long-card-content{
  padding: 15px 30px 10px 15px;
}

.card-title {
  font-weight: bold;
  font-size: 14px;
}

.card-subtitle{
  font-size:12px;
  padding: 4px 0 0 0px;
  display: flex;
}

.money-subtitle{
  font-weight: bold;
  padding-left: 3px
}

.star-long-card{
  font-size: 12px;
  padding: 20px 0 0 0;
  bottom: 0;
}

.star-card{
 font-size: 12px;
 padding: 4px 0 0 0;
}

.card-footer {
  position: absolute;
  bottom: 0;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  height: 30px;
  width: 100%;
  padding: 10px;
  background-color: var(--white);
  font-weight: bold;
}

.AfficherPlus {
  font-weight: bold;
  margin-left: 20px;
  margin-top: 20px;
}
.parentLong-card{
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
}
.long-card {
  display: flex;
  height: 110px;
  width: 300px;
  background: var(--white);
  border-radius: 20px;
  margin: 20px;
  font-size: 14px;
  overflow: hidden;
  border: 4px solid white;
}

.parentImgLong {
  display: flex;
}

.imgLong-card{
  width: 110px;
  object-fit: cover;
}

.card > .title {
  margin-left: 20px;
}

.flex {
  display: flex;
}

.master {
  display: flex;
  flex-direction: column;
  row-gap: 20px;
  padding: 15px 30px 50px 30px;
}
.Activites {
  padding: 30px 15px 15px 15px;
}
.parentActivites {
  max-height: 500px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 40px;
  grid-template-areas:
    "VieuxPort FortdePomegue ParcNationaldesCalanques Notre-Dame-de-la-Grade"
    "VieuxPort IlesduFrioul ParcNationaldesCalanques ParcLongchamp";
}
.parentActivites > * {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 20px;
  background-color: var(--white);
  box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
  overflow: hidden;
}

.VieuxPort {
  grid-area: VieuxPort;
}
.FortdePomegue {
  grid-area: FortdePomegue;
}
.IlesduFrioul {
  grid-area: IlesduFrioul;
}
.ParcNationaldesCalanques {
  grid-area: ParcNationaldesCalanques;
}
.Notre-Dame-de-la-Grade {
  grid-area: Notre-Dame-de-la-Grade;
}
.ParcLongchamp {
  grid-area: ParcLongchamp;
}
.parentImgActivite {
  display: flex;
}
.imgActivites {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

#footer {
  display: flex;
  justify-content: space-around;
  height: 150px;
  width: 100%;
  font-size: 12px;
  background-color: var(--gray);
  flex-wrap: wrap;
  padding-top: 20px;
}

/* breakpoint for mobile devices */
@media screen and (max-width: 375px) {
  .title-filter{
    min-width: 40px;
  }
}

